--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,5 +1,6 @@
 @import "settings";
 @import "foundation";
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,600);
 
 // Or selectively include components
 // @import
@@ -38,3 +39,24 @@
 //   "foundation/components/type",
 //   "foundation/components/offcanvas",
 //   "foundation/components/visibility";
+body, h1, h2, h3, h4, h5, h6 {
+  font-family: 'Open Sans';
+}
+header {
+  background: url(../img/header3.jpg) no-repeat bottom center;
+  background-size: cover;
+
+  padding: 70px 0;
+
+  h1 {
+    color: white;
+    font-weight: 300;
+  }
+  h4 {
+    color: white;
+    font-weight: 300;
+  }
+}
+.button.brand-red {
+  background-color: #E63A3A;
+}
