--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -2,4 +2,5 @@
 // The latest settings can be found here:
 // https://github.com/zurb/bower-foundation/blob/master/scss/foundation/_settings.scss
 
+$topbar-height: rem-calc(55);
 $topbar-bg-color: #1C292D;
