--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,3 +1,4 @@
+@import "foundation/functions";
 @import "settings";
 @import "foundation";
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,600);
