--- a/scss/app.scss
+++ b/scss/app.scss
@@ -52,10 +52,12 @@ header {
   h1 {
     color: white;
     font-weight: 300;
+    font-size: 2.5rem;
   }
   h4 {
     color: white;
     font-weight: 300;
+    font-size: 1.5rem;
   }
 }
 .button.brand-red {
