--- a/scss/app.scss
+++ b/scss/app.scss
@@ -53,11 +53,13 @@ header {
     color: white;
     font-weight: 300;
     font-size: 2.5rem;
+    line-height: 3rem;
   }
   h4 {
-    color: white;
+    color: #F5F5F5;
     font-weight: 300;
     font-size: 1.5rem;
+    line-height: 2rem;
   }
 }
 .button.brand-red {
