change nav color

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -3,7 +3,7 @@
 // https://github.com/zurb/bower-foundation/blob/master/scss/foundation/_settings.scss
 
 $topbar-height: rem-calc(55);
-$topbar-bg-color: #1C292D;
+$topbar-bg-color: #222222;
 $topbar-dropdown-bg: $topbar-bg-color;
 $topbar-dropdown-link-bg: $topbar-bg-color;
 $topbar-dropdown-link-bg-hover: lighten($topbar-bg-color, 15%);
